# esp-who

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .tags  .tags_sorted_by_file  CHANGELOG.md  README.md  README.rst  README_CN.md  esp_idf.json
components/bsp/glib/esp32_s3_korvo_2/: CMakeLists.txt  esp32_s3_korvo_2.c  idf_component.yml
components/esp-code-scanner/: .project  CMakeLists.txt
components/esp-code-scanner/include/: esp_code_scanner.h
components/esp-dl/esp-dl/: CMakeLists.txt  README.md  idf_component.yml
components/esp-dl/esp-dl/dl/: dl_define.hpp  dl_define_private.hpp
components/esp-dl/models/human_face_recognition/: CMakeLists.txt  Kconfig  README.md  human_face_recognition.cpp  human_face_recognition.hpp  idf_component.yml
components/esp-dl/models/pedestrian_detect/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  pedestrian_detect.cpp  pedestrian_detect.hpp
components/esp-sr/: CMakeLists.txt  Makefile  component.mk
components/esp-sr/acoustic_algorithm/include/: esp_aec.h  esp_agc.h  esp_ns.h  esp_vad.h
components/esp-sr/lib/: component.mk
components/esp-sr/lib/include/: dl_lib.h  dl_lib_coefgetter_if.h  dl_lib_conv_queue.h  dl_lib_convq_queue.h  dl_lib_matrix.h  dl_lib_matrixq.h
components/esp-sr/wake_word_engine/include/: esp_wn_iface.h  esp_wn_models.h  hilexin_wn5.h
components/esp32_s3_eye/: .component_hash  CMakeLists.txt  Kconfig  README.md  esp32_s3_eye.c  esp32_s3_eye_idf4.c  idf_component.yml
components/esp32_s3_eye/include/bsp/: esp32_s3_eye.h
components/fb_gfx/: CMakeLists.txt  fb_gfx.c  idf_component.yml
components/mdns/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  mdns.c  mdns_console.c  mdns_networking_lwip.c  mdns_networking_socket.c
components/mdns/docs/: Doxyfile  conf_common.py  generate_docs
components/mdns/docs/en/: conf.py  index.rst
components/mdns/docs/zh_CN/: index.rst
components/mdns/examples/: CMakeLists.txt  README.md  pytest_mdns.py
components/mdns/examples/main/: CMakeLists.txt  mdns_example_main.c
components/mdns/private_include/: mdns_networking.h  mdns_private.h
components/mdns/tests/host_test/: CMakeLists.txt  sdkconfig.defaults
components/mdns/tests/test_afl_fuzz_host/: Makefile  esp32_mock.c  esp32_mock.h  mdns_mock.h  sdkconfig.h
components/mdns/tests/test_apps/: CMakeLists.txt
components/mdns/tests/unit_test/: pytest_mdns.py
components/modules/: CMakeLists.txt  Kconfig  idf_component.yml
components/modules/ai/: app_common.cpp  app_common.hpp  who_ai_utils.cpp  who_ai_utils.hpp  who_cat_face_detection.cpp  who_cat_face_detection.hpp  who_color_detection.cpp  who_color_detection.hpp  who_human_face_detection.cpp  who_human_face_detection.hpp  who_human_face_recognition.cpp  who_human_face_recognition.hpp  who_motion_detection.cpp  who_motion_detection.hpp
components/modules/button/: who_adc_button.c  who_adc_button.h  who_button.c  who_button.h
components/modules/camera/: who_camera.c  who_camera.h
components/modules/imu/: qma7981.c  qma7981.h
components/modules/lcd/: logo_en_240x240_lcd.h  wallpaper_128x240_rgb565.h  who_lcd.c  who_lcd.h
components/modules/led/: who_led.c  who_led.h
components/modules/trace/: who_trace.c  who_trace.h
components/modules/web/: app_httpd.cpp  app_httpd.hpp  app_mdns.c  app_mdns.h  app_wifi.c
components/modules/web/www/: index_ov2640.html  index_ov3660.html
components/who_app/who_detect_app/: CMakeLists.txt  idf_component.yml  who_detect_app.cpp  who_detect_app.hpp  who_detect_app_base.cpp  who_detect_app_base.hpp  who_detect_app_lcd.cpp  who_detect_app_lcd.hpp  who_detect_app_term.cpp  who_detect_app_term.hpp
components/who_app/who_qrcode_app/: CMakeLists.txt  who_qrcode_app.cpp  who_qrcode_app.hpp  who_qrcode_app_base.cpp  who_qrcode_app_base.hpp  who_qrcode_app_lcd.cpp  who_qrcode_app_lcd.hpp  who_qrcode_app_term.cpp  who_qrcode_app_term.hpp
components/who_app/who_recognition_app/: CMakeLists.txt  Kconfig  who_recognition_app.cpp  who_recognition_app.hpp  who_recognition_app_base.cpp  who_recognition_app_base.hpp  who_recognition_app_lcd.cpp  who_recognition_app_lcd.hpp  who_recognition_app_term.cpp  who_recognition_app_term.hpp  who_recognition_button.cpp  who_recognition_button.hpp
components/who_modules/: CMakeLists.txt  idf_component.yml
components/who_modules/who_app/: who_app.cpp  who_app.hpp
components/who_modules/who_cam/: who_cam.cpp  who_cam.hpp
components/who_modules/who_lcd/: who_lcd.cpp  who_lcd.hpp
components/who_peripherals/: CMakeLists.txt  idf_component.yml
components/who_peripherals/cam/: cam.cpp  cam.hpp  cam_define.hpp
components/who_peripherals/esp_video_cxx/: CMakeLists.txt  idf_component.yml  v4l2_device.cpp  v4l2_device.hpp  video_capture.cpp  video_capture.hpp  video_encoder.cpp  video_encoder.hpp
components/who_peripherals/lcd/: lcd.cpp  lcd.hpp
components/who_peripherals/mcpwm_cxx/: CMakeLists.txt  Kconfig  mcpwm.cpp  mcpwm.hpp  mcpwm_servo_control_example_main.c_
components/who_peripherals/who_cam/: CMakeLists.txt  idf_component.yml  who_cam.hpp  who_cam_base.hpp  who_cam_define.hpp
components/who_peripherals/who_cam/who_cam_p4/: who_cam_define.hpp  who_esp_video.cpp  who_esp_video.hpp  who_p4_cam.cpp  who_p4_cam.hpp  who_p4_ppa_cam.cpp  who_p4_ppa_cam.hpp
components/who_peripherals/who_cam/who_cam_s3/: who_s3_cam.cpp  (+2 more)
components/who_peripherals/who_lcd/: CMakeLists.txt  idf_component.yml  who_lcd.cpp  who_lcd.hpp  who_lvgl_lcd.cpp  who_lvgl_lcd.hpp
components/who_peripherals/who_spiflash_fatfs/: CMakeLists.txt  who_spiflash_fatfs.cpp  who_spiflash_fatfs.hpp
components/who_peripherals/who_usb/: CMakeLists.txt  who_usb.cpp  who_usb.hpp
examples/human_face_recognition/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  cat_detect_app.cpp  cat_detect_app.hpp  frame_cap_pipeline.cpp  frame_cap_pipeline.hpp  http_server.cpp  http_server.hpp  idf_component.yml
examples/human_face_recognition_mqtt_simple/main/: CMakeLists.txt  Kconfig  app_main.cpp  http_lcd.hpp  idf_component.yml  mqtt_handler.cpp  mqtt_handler.hpp
(+1646 files in other folders)
